syntax = "proto3";

package userservice;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message UserResponse {
  StatusResponse status = 1;
  string userId = 2;
  string username = 3;
  string email = 4;
}

message StatusResponse {
  bool success = 1;
  optional string message = 2;
}